Created print and view

--- a/src/main/resources/static/Parent.html
+++ b/src/main/resources/static/Parent.html
@@ -354,7 +354,7 @@
                             <table id="tablePrintTbl" class="table  table-striped table-hover">
 
                                 <tr>
-                                    <th>Parent ID</th>
+                                    <th>Parent NIC</th>
                                     <td id="td_id"></td>
                                 </tr>
 
@@ -378,19 +378,20 @@
                                     <td id="td_sadd"></td>
                                 </tr>
 
-                                <tr>
-                                    <th>Parent NIC</th>
-                                    <td id="td_snic"></td>
-                                </tr>
-
-                                <tr>
-                                    <th>Parent DOB</th>
-                                    <td id="td_sdob"></td>
-                                </tr>
 
                                 <tr>
                                     <th>Parent Email</th>
                                     <td id="td_semail"></td>
+                                </tr>
+
+                                <tr>
+                                    <th>Linked Student ID</th>
+                                    <td id="td_stid"></td>
+                                </tr>
+
+                                <tr>
+                                    <th>Linked Student Name</th>
+                                    <td id="td_stname"></td>
                                 </tr>
 
                                 <tr>
