--- a/src/main/resources/static/StudentRegistration.html
+++ b/src/main/resources/static/StudentRegistration.html
@@ -220,7 +220,7 @@
                         <div class="row">
 
                             <!-- Floating Labels Form -->
-                            <form class="row g-3">
+                            <form onsubmit="return false" class="row g-3">
                                 <div class="col-md-6">
                                     <div class="form-floating">
                                         <input onkeyup="findStudentID()" type="text" class="form-control" id="floatingFName"
@@ -230,7 +230,7 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <input type="text" class="form-control" id="floatingLName"
+                                        <input disabled type="text" class="form-control" id="floatingLName"
                                                placeholder="Your Name">
                                         <label for="floatingLName">First Name</label>
                                     </div>
@@ -238,31 +238,18 @@
 
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3">
-                                        <select class="form-select" id="floatingSelectClass" aria-label="State">
+                                        <select onchange="selectValidater(floatingSelectClass,'','stureg','class_implementation_id','old_stureg')" class="form-select" id="floatingSelectClass" aria-label="State">
                                             <option selected>Select Class Name</option>
-                                            <option value="1">Oregon</option>
-                                            <option value="2">DC</option>
                                         </select>
-                                        <label for="floatingSelectClass">Class Name</label>
+                                        <label for="floatingSelectClass">Class Coda & Name</label>
                                     </div>
                                 </div>
 
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3">
-                                        <select class="form-select" id="floatingSelect" aria-label="State">
-                                            <option selected>Select Institute</option>
-                                            <option value="1">Oregon</option>
-                                            <option value="2">DC</option>
-                                        </select>
-                                        <label for="floatingSelect">Institute</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-floating mb-3">
                                         <select class="form-select" id="floatingSelectStatus" aria-label="State">
                                             <option selected>Select Registration Status</option>
-                                            <option value="1">Oregon</option>
-                                            <option value="2">DC</option>
+
                                         </select>
                                         <label for="floatingSelectStatus">Registration status</label>
                                     </div>
@@ -270,8 +257,8 @@
 
 
                                 <div class="text-center">
-                                    <button type="submit" class="btn btn-primary">Add Registration</button>
-                                    <button type="reset" class="btn btn-secondary">Update Registration</button>
+                                    <button type="submit" onclick="buttonAddMc()" id="addbtn" class="btn btn-primary">Add Registration</button>
+                                    <button type="button" onclick="buttonUpdateMC()" id="updatebtn" class="btn btn-secondary">Update Registration</button>
                                 </div>
                             </form><!-- End floating Labels Form -->
                         </div>
@@ -289,10 +276,10 @@
                             <thead>
                             <tr>
                                 <th scope="col">#</th>
-                                <th scope="col">Student Class Reg Code</th>
+                                <th scope="col">Registration Code</th>
                                 <th scope="col">Student ID</th>
-                                <th scope="col">Class Name</th>
-                                <th scope="col">Institute Name</th>
+                                <th scope="col">Class Code</th>
+                                <th scope="col">Registration Status</th>
                                 <th scope="col">Modify</th>
                             </tr>
                             </thead>
@@ -305,7 +292,59 @@
             </div>
         </div>
 
+        <!--model for view with print-->
+        <div class="modal fade" id="studentViewModel" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Student Class Reg Details</h5>
+                        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <table id="tablePrintTbl" class="table  table-striped table-hover">
 
+                            <tr>
+                                <th>Registration Code</th>
+                                <td id="td_regid"></td>
+                            </tr>
+
+                            <tr>
+                                <th>Student ID</th>
+                                <td id="td_id"></td>
+                            </tr>
+
+                            <tr>
+                                <th>Student First Name</th>
+                                <td id="td_fname"></td>
+                            </tr>
+
+                            <tr>
+                                <th>Class Code</th>
+                                <td id="td_ccode"></td>
+                            </tr>
+
+                            <tr>
+                                <th>Class Name</th>
+                                <td id="td_cname"></td>
+                            </tr>
+
+
+                            <tr>
+                                <th>Registration Status</th>
+                                <td id="td_sstatus"></td>
+                            </tr>
+                        </table>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button onclick="studentPrintModel()" type="button" class="btn btn-primary">Print</button>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- End #main -->
         </div>
 
