Created user account

--- a/src/main/resources/static/Teacher.html
+++ b/src/main/resources/static/Teacher.html
@@ -221,6 +221,7 @@
                         <div class="row">
 
                             <!-- Floating Labels Form -->
+<!--                            Form Section-->
                             <form onsubmit="return false" class="row g-3">
                                 <div class="col-md-6">
                                     <div class="form-floating">
