--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -28,6 +28,12 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  <!-- jquary -->
+  <script src="assets/Resourse/Jquary/jquary.js"></script>
+
+<!--Link Dashboard and common js-->
+  <script src="assets/js/common.js"></script>
+  <script src="/assets/js/dashboard.js"></script>
 
   <!-- =======================================================
   * Template Name: NiceAdmin - v2.2.2
@@ -210,14 +216,14 @@
         <li class="nav-item dropdown pe-3">
 
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-            <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
-            <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
+            <img src="" alt="Profile" class="rounded-circle" id="logimage">
+            <span id="uname" class="d-none d-md-block dropdown-toggle ps-2"></span>
           </a><!-- End Profile Iamge Icon -->
 
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
             <li class="dropdown-header">
-              <h6>Kevin Anderson</h6>
-              <span>Web Designer</span>
+              <h6 id="uname1"></h6>
+              <span id="role"></span>
             </li>
             <li>
               <hr class="dropdown-divider">
@@ -256,7 +262,7 @@
             <li>
               <a class="dropdown-item d-flex align-items-center" href="#">
                 <i class="bi bi-box-arrow-right"></i>
-                <span>Sign Out</span>
+                <span onclick="logoutMC()">Sign Out</span>
               </a>
             </li>
 
